--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
         <arg value="-Dfile=${jarfile}"/>
         <arg value="-DgroupId=org.violetlib"/>
         <arg value="-DartifactId=vaquaclient"/>
-        <arg value="-Dversion=1.0-SNAPSHOT"/>
+        <arg value="-Dversion=2.0"/>
         <arg value="-Dpackaging=jar"/>
     </exec>
   </target>
