--- a/release/build.xml
+++ b/release/build.xml
@@ -1,126 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="VAquaClient"
-    basedir="."
-    default="release"
-    xmlns:if="ant:if"
-    xmlns:unless="ant:unless"
-    xmlns:resolver="antlib:org.apache.maven.resolver.ant"
-    xmlns:ivy="antlib:org.apache.ivy.ant"
-    >
+<project name="VAquaClient" default="build">
 
-    <tstamp>
-        <format property="NOW" timezone="GMT" pattern="yyyy-MM-dd'T'HH:mm:ss'Z'"/>
-    </tstamp>
+  <!-- See https://violetlib.org/vbuilder/overview.html" -->
 
-    <property name="base" location=".."/>
-    <property name="src" location="${base}/src"/>
-    <property name="resourcesdir" location="${base}/resources"/>
-    <property name="builddir" location="out"/>
-    <property name="classesdir" location="${builddir}/classes"/>
-    <property name="distdir" location="dist"/>
+  <typedef resource="org/violetlib/vbuilder/ant/antlib.xml"/>
+  
+  <property name="RELEASE" value="3"/>
 
-    <property name="debug" value="false"/>
+  <tstamp>
+    <format property="NOW" timezone="GMT" pattern="yyyy-MM-dd'T'HH:mm:ss'Z'"/>
+  </tstamp>
 
-    <!-- A Java 9 or later compiler is required -->
+  <property name="libname" value="VAquaClient"/>
+  <property name="artifactCoordinates" value="org.violetlib:vaquaclient:${RELEASE}"/>
 
-    <property environment="env"/>
-    <property if:set="env.JAVA_HOME" name="jdk" value="${env.JAVA_HOME}"/>
-    <property name="jdk" location="${java.home}"/>
-    <echo message="Using JDK: ${jdk}"/>
+  <use key="org.jetbrains:annotations" version="20.1.0" scope="compile"/>
 
-    <property name="javac" location="${jdk}/bin/javac"/>
+  <property name="base" location=".."/>
+  <property name="src" location="${base}/src"/>
+  <property name="resourcesdir" location="${base}/resources"/>
+  <property name="builddir" location="out"/>
+  <property name="classesdir" location="${builddir}/classes"/>
+  <property name="distdir" location="dist"/>
+  <property name="debug" value="false"/>
 
-    <property name="RELEASE" value="0.9"/>
-    <property name="fullReleaseName" value="${RELEASE} ${NOW}"/>
+  <property name="fullReleaseName" value="${RELEASE} ${NOW}"/>
 
-    <target name="init">
-        <echo level="info" message="${fullReleaseName}"/>
-    </target>
+  <target name="clean">
+    <deleteDirectory directory="${builddir}"/>
+    <deleteDirectory directory="${distdir}"/>
+  </target>
 
-    <target name="clean">
-        <delete includeEmptyDirs="true" failonerror="false"><fileset dir="${builddir}"/></delete>
-    </target>
+  <target name="saveIDs">
+    <echo file="${classesdir}/org/violetlib/vaquaclient/RELEASE.txt" message="${RELEASE}"/>
+    <echo file="${classesdir}/org/violetlib/vaquaclient/BUILD.txt" message="${NOW}"/>
+  </target>
 
-    <target name="saveIDs">
-      <echo file="${classesdir}/org/violetlib/vaquaclient/RELEASE.txt" message="${RELEASE}"/>
-      <echo file="${classesdir}/org/violetlib/vaquaclient/BUILD.txt" message="${NOW}"/>
-    </target>
-
-    <condition property="resourcesPresent">
-        <resourceexists>
-            <file file="${resourcesdir}"/>
-        </resourceexists>
-    </condition>
-
-    <target name="copyResources" if="${resourcesPresent}">
-        <copy todir="${classesdir}">
-            <fileset dir="${resourcesdir}">
-                <include name="org/violetlib/**"/>
-            </fileset>
-        </copy>
-    </target>
-
-    <property name="annotationsVersion" value="20.1.0"/>
-
-    <!--
-      To use the Maven resolver, the Maven resolver ant tasks uber JAR must be installed in .ant/lib.
-      See https://maven.apache.org/resolver-ant-tasks/
-    -->
-
-    <target name="resolve-maven">
-        <resolver:resolve>
-            <dependencies>
-                <dependency coords="org.jetbrains:annotations:${annotationsVersion}"/>
-            </dependencies>
-            <path refid="cp" classpath="compile"/>
-        </resolver:resolve>
-    </target>
-
-    <!--
-      To use the Ivy resolver, the Ivy uber JAR must be downloaded and installed in .ant/lib.
-      See https://ant.apache.org/ivy/
-    -->
-
-    <target name="resolve-ivy">
-        <ivy:cachepath pathid="cp">
-            <dependency org="org.jetbrains" name="annotations" rev="${annotationsVersion}"/>
-        </ivy:cachepath>
-    </target>
-
-    <target name="resolve" depends="resolve-maven"/>
-
-    <target name="compile-java" depends="copyResources, resolve">
-      <mkdir dir="${classesdir}"/>
-
-      <javac
-          classpathref="cp"
-          encoding="UTF-8"
-          release="8"
-          srcdir="${src}"
-          destdir="${classesdir}"
-          debug="${debug}"
-          optimize="true"
-          includeantruntime="false"
-          fork="true"
-          executable="${javac}"
-          >
-          <patternset>
-            <include name="org/violetlib/vaquaclient/**/*.java"/>
-          </patternset>
-      </javac>
-    </target>
-
-    <target name="VAquaClient" depends="compile-java,saveIDs">
-
-        <echo level="info" message="Building VAquaClient ${fullReleaseName}"/>
-
-        <mkdir dir="${distdir}"/>
-
-        <jar jarfile="${distdir}/VAquaClient.jar" basedir="${classesdir}" manifest="${resourcesdir}/Manifest">
-        </jar>
-    </target>
-
-    <target name="release" depends="clean,VAquaClient"/>
+  <target name="build" depends="clean, saveIDs">
+    <echo level="info" message="Building ${libname} ${fullReleaseName}"/>
+    <javaLibrary
+      name="${libname}"
+      dist="${distdir}"
+      release="8"
+      codeSigningKey="${codeSignKey}"
+      mavenCoordinates="${artifactCoordinates}"
+      buildRoot="${builddir}"
+      manifest="${resourcesdir}/Manifest"
+      >
+      <source base="${src}"/>
+    </javaLibrary>
+  </target>
 
 </project>
